--- a/.github/workflows/automation-tests.yml
+++ b/.github/workflows/automation-tests.yml
@@ -33,6 +33,8 @@ jobs:
       - name: Run Cypress tests (chrome)
         run: npm run cy:run -- --browser chrome
         continue-on-error: true
+        env:
+          NODE_OPTIONS: --no-warnings --max-old-space-size=4096
 
       - name: Generate Allure Report
         if: always()
