--- a/.github/workflows/manual-tests.yml
+++ b/.github/workflows/manual-tests.yml
@@ -65,6 +65,8 @@ jobs:
             npm run cy:run -- --browser $BROWSER
           fi
         continue-on-error: true
+        env:
+          NODE_OPTIONS: --no-warnings --max-old-space-size=4096
 
       - name: Generate Allure Report
         if: ${{ always() && inputs.generate_report }}
