--- a/.github/workflows/manual-tests.yml
+++ b/.github/workflows/manual-tests.yml
@@ -68,6 +68,15 @@ jobs:
         env:
           NODE_OPTIONS: --no-warnings --max-old-space-size=4096
 
+      - name: Publish test results to GitHub
+        if: always()
+        uses: dorny/test-reporter@v1
+        with:
+          name: "Cypress E2E - Manual"
+          path: "results/junit/*.xml"
+          reporter: "java-junit"
+          fail-on-error: false
+
       - name: Generate Allure Report
         if: ${{ always() && inputs.generate_report }}
         run: npm run allure:generate
@@ -78,11 +87,13 @@ jobs:
         run: |
           mkdir -p artifact/videos
           mkdir -p artifact/screenshots
+          mkdir -p artifact/junit
           mkdir -p artifact/allure-results
           mkdir -p artifact/allure-report
           
           cp -r cypress/videos/* artifact/videos/ || true
           cp -r cypress/screenshots/* artifact/screenshots/ || true
+          cp -r results/junit/* artifact/junit/ || true
           cp -r allure-results/* artifact/allure-results/ || true
           cp -r allure-report/* artifact/allure-report/ || true
 
