--- a/.github/workflows/manual-tests.yml
+++ b/.github/workflows/manual-tests.yml
@@ -45,6 +45,9 @@ jobs:
         with:
           node-version: '16'
 
+      - name: Setup Chrome
+        uses: browser-actions/setup-chrome@v1
+
       - name: Install dependencies
         run: npm install --no-audit --no-fund
 
